--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="portfolio">
             <div class="container">
                 <h1 class="portfolio-title">
-                    My stocks portfolio real-time price
+                    Stocks portfolio real-time price
                 </h1>
 
                 <div class="portfolio-wrap">
@@ -23,33 +23,67 @@
                             </span>
                         </div>
                         <div class="portfolio-header-item">
-                            <span class="portfolio-header-item-text">
+                            <span class="portfolio-header-text">
                                 Ticker
                             </span>
                         </div>
                         <div class="portfolio-header-item">
-                            <span class="portfolio-header-item-text">
+                            <span class="portfolio-header-text">
                                 Exchange
                             </span>
                         </div>
                         <div class="portfolio-header-item">
-                            <span class="portfolio-header-item-text">
+                            <span class="portfolio-header-text">
                                 Current price
                             </span>
                         </div>
                         <div class="portfolio-header-item">
-                            <span class="portfolio-header-item-text">
+                            <span class="portfolio-header-text">
                                 % change
                             </span>
                         </div>
                     </div>
 
-                    <div class="portfolio-list">
 
-                    </div>
+                    <!-- <ul class="portfolio-list">
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                Apple
+                            </div>
+                        </li>
+                    </ul> -->
 
+
+                    <!-- <div class="portfolio-list">
+                        <div class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span class="portfolio-company-field-text">
+                                    Apple Inc.
+                                </span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span class="portfolio-ticker-field-text">
+                                    AAPL
+                                </span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span class="portfolio-exchange-field-text">
+                                    NASDAQ
+                                </span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="portfolio-price-field-text">
+                                    212,30
+                                </span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span class="portfolio-percent-field-text">
+                                    +1,3%
+                                </span>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
-                
             </div>
         </section>
     </main>
