--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
 
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <main class="main">
         <section class="portfolio">
@@ -44,50 +46,184 @@
                         </div>
                     </div>
 
-
-                    <!-- <ul class="portfolio-list">
+                    <ul class="portfolio-list">
                         <li class="portfolio-list-item">
                             <div class="portfolio-company-field">
-                                Apple
-                            </div>
-                        </li>
-                    </ul> -->
-
-
-                    <!-- <div class="portfolio-list">
-                        <div class="portfolio-list-item">
-                            <div class="portfolio-company-field">
-                                <span class="portfolio-company-field-text">
-                                    Apple Inc.
-                                </span>
+                                <span>Apple</span>
                             </div>
                             <div class="portfolio-ticker-field">
-                                <span class="portfolio-ticker-field-text">
-                                    AAPL
-                                </span>
+                                <span>AAPL</span>
                             </div>
                             <div class="portfolio-exchange-field">
-                                <span class="portfolio-exchange-field-text">
-                                    NASDAQ
-                                </span>
+                                <span>NASDAQ</span>
                             </div>
                             <div class="portfolio-price-field">
-                                <span class="portfolio-price-field-text">
-                                    212,30
-                                </span>
+                                <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span class="portfolio-percent-field-text">
-                                    +1,3%
-                                </span>
+                                <span id="percent-output"></span>
                             </div>
-                        </div>
-                    </div> -->
+                        </li>
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span>Canadian Pacific</span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span>CP</span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span>NYSE</span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="price-output"></span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span id="percent-output"></span>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span>Deere & Co</span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span>DE</span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span>NYSE</span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="price-output"></span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span id="percent-output"></span>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span>Alphabet</span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span>GOOGL</span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span>NASDAQ</span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="price-output"></span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span id="percent-output"></span>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span>Home Depot</span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span>HD</span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span>NYSE</span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="price-output"></span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span id="percent-output"></span>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span>Microsoft</span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span>MSFT</span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span>NASDAQ</span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="price-output"></span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span id="percent-output"></span>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span>NextEra Energy</span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span>NEE</span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span>NYSE</span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="price-output"></span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span id="percent-output"></span>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span>Tractor Supply</span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span>TSCO</span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span>NASDAQ</span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="price-output"></span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span id="percent-output"></span>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span>Texas Instruments</span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span>TXN</span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span>NASDAQ</span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="price-output"></span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span id="percent-output"></span>
+                            </div>
+                        </li>
+                        <li class="portfolio-list-item">
+                            <div class="portfolio-company-field">
+                                <span>Vanguard S&P 500 ETF</span>
+                            </div>
+                            <div class="portfolio-ticker-field">
+                                <span>VOO</span>
+                            </div>
+                            <div class="portfolio-exchange-field">
+                                <span>NYSE</span>
+                            </div>
+                            <div class="portfolio-price-field">
+                                <span class="price-output"></span>
+                            </div>
+                            <div class="portfolio-percent-field">
+                                <span id="percent-output"></span>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
     </main>
-    
+
     <script src="main.js"></script>
 </body>
+
 </html>
