loop for price data

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                         <li class="portfolio-list-item">
@@ -78,7 +78,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                         <li class="portfolio-list-item">
@@ -95,7 +95,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                         <li class="portfolio-list-item">
@@ -112,7 +112,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                         <li class="portfolio-list-item">
@@ -129,7 +129,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                         <li class="portfolio-list-item">
@@ -146,7 +146,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                         <li class="portfolio-list-item">
@@ -163,7 +163,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                         <li class="portfolio-list-item">
@@ -180,7 +180,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                         <li class="portfolio-list-item">
@@ -197,7 +197,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                         <li class="portfolio-list-item">
@@ -214,7 +214,7 @@
                                 <span class="price-output"></span>
                             </div>
                             <div class="portfolio-percent-field">
-                                <span id="percent-output"></span>
+                                <span class="percent-output"></span>
                             </div>
                         </li>
                     </ul>
