deleted unused fonts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="portfolio">
             <div class="container">
                 <h1 class="portfolio-title">
-                    Stocks portfolio real-time price
+                    My stocks portfolio real-time price
                 </h1>
 
                 <div class="portfolio-wrap">
